--- a/config.html
+++ b/config.html
@@ -6,16 +6,17 @@
     <title>Sushi Mania - Congifuracion</title>
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+15&display=swap" rel="stylesheet">
 </head>
 <body>
     <main class="contenedor-pagina contenedor-config">
         <div class="contenedor-logoConfig">
-            <img src="imagenes/Config.png" alt="" class="logoConfig">
+            <img src="imagenes/Nuevas/Configuracion.png" alt="" class="logoConfig">
         </div>
         <div class="contenedor-contenedores-config">
             <div class="contenedor-botones-config">
-                <a class="button-ui" href="#">DIFICULTAD</a>
-                <a class="button-ui" href="#">CALIDAD GRAF.</a>
                 <br><br><br><br>
                 <a class="button-ui" href="index.html">GUARDAR</a>
                 <a class="button-ui" href="index.html">CONTINUAR</a>
@@ -41,7 +42,7 @@
                         }
                     </script>
                 </a>
-                <br><br><br>
+                <br>
                 <a class="button-ui" href="#">VOL. VFX
                     <div class="slider-cont">
                         <div class="slider">
