--- a/gameplayM.html
+++ b/gameplayM.html
@@ -91,7 +91,7 @@
 		}
 		
 		.contenedor-config {
-    background-image: url(imagenes/BACKGROUND-IMG.png);
+    background-image: url(imagenes/Nuevas/fondoConfiguraciones.jpg);
 	margin-left: 17%;
 }
 		.contenedor-logoConfig {
@@ -116,13 +116,13 @@
 		}
 		.button-ui {
     appearance: button;
-    background-color: #a7a6d9 !important;
+    background-color: #31E354 !important;
     border: 0px;
     box-sizing: border-box;
     color: #FFFFFF;
     cursor: pointer;
     display: inline-block;
-    font-size: 10px;
+    font-size: 13px;
     font-weight: bold;
     letter-spacing: 3px;
     line-height: 20px;
@@ -170,7 +170,7 @@
     width: 20px;
     height: 20px;
     background-color: #FFFFFF;
-    border: 2px solid #e91e63;
+    border: 2px solid #391ee9;
     border-radius: 50%;
     cursor: pointer;
 }
@@ -188,7 +188,7 @@
     background-color: #f0f0f0;
 }
 .slider progress::-webkit-progress-value{
-    background-color: #e91e63;
+    background-color: #391ee9;
 }
 .sliderValueMusica{
     width: 28px;
@@ -256,11 +256,11 @@
 			<ul id="PuntuacionesLIVE-list"></ul>
 		</div>
 		<!-- GAME OVER -->
-		<div id="contenedor-game-over" class="gameplay-alert" style="display: none; background-image: url(imagenes/puntuaciones-background.png); color:#79582a;">
+		<div id="contenedor-game-over" class="gameplay-alert" style="display: none; background-image: url(imagenes/Nuevas/fondo_principal_provisional.jpg); color:rgb(3, 4, 3);">
 			<div class="contenido-game-over">
 				<img src="imagenes/titulo-puntuaciones.png" alt="" width="600px">
 				<br>
-				<div class="clay" style="background-color:#fab659;padding: 70px;">
+				<div class="clay" style="background-color:#a333df;padding: 70px;">
 				<h1>GAME OVER</h1>
 				<div id="SinglePlayer">
 					<h2>Puntuacion final: <span id="puntuacion-final"></span></h2>
@@ -269,7 +269,7 @@
 					<button type="button" class="button-ui clay" id="btnReiniciarJuego">Volver a intentar</button>
 				</div>
 				<div id="Multiplayer">
-					<h2 id="PuntuacionMulti">¡Fin del Juego!</h2>
+					<h2 id="PuntuacionMulti"></h2>
 					<h2 id="GanadorTitulo">Ganador del Enfrentamiento:</h2>
 					<h2><span id="GanadorNombre"></span></h2>
 				</div>
@@ -279,7 +279,7 @@
 		<!-- PAUSA Y CONFIGURACION -->
 		<div id="contenedor-pausa" class="gameplay-alert contenedor-config" style="display: none;">
 			<div class="contenedor-logoConfig">
-				<img src="imagenes/Config.png" alt="" class="logoConfig">
+				<img src="imagenes/Nuevas/Configuracion.png" alt="" class="logoConfig">
 			</div>
 			<div class="contenedor-contenedores-config">
 				<!--
