--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sushi Mania - Inicio</title>
+    <title>StrikeBall - Inicio</title>
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+15&display=swap" rel="stylesheet">
     <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
   </head>
 <body>
     <main class="contenedor-pagina contenedor-inicio">
         <div class="contenedor-logo">
-            <img src="imagenes/logo.png" alt="" class="logo">
+            <img src="imagenes/Nuevas/logo strikeball.png" alt="" class="logo">
         </div>
         <div class="contenedor-botones" id="contenedor-botones">
             <button class="button-ui" onclick="clickJugar()">JUGAR</button>
