--- a/gameplayM.html
+++ b/gameplayM.html
@@ -5,11 +5,39 @@
 	<style>
 		*{
 			
-			font-family: 'Titan One', cursive;
+			font-family: "Jersey 15", sans-serif;
+			font-size: 20px;
 		}
 		body { margin: 0; }
 		#gameplay-container {
 			position: relative;
+		}
+		.nombre{
+			background-color: #33EFFF;
+			padding: 20px;
+		}
+		.no-mostrar{
+			opacity: 0.1;
+		}
+		.notis{
+			position: absolute;
+			background-color: white;
+			padding: 2em;
+			margin: 2em;
+		}
+		.puntuaciones{
+			position: absolute;
+			/*background-color: #0A1B51;*/
+			background-image: url("imagenes/imagen_puntos_fondo.jpg");
+			padding: 2em;
+			font-weight: bold;
+			margin: 2em;
+			border-radius: 15%;
+		}
+		.dentro-puntos{
+			background-color: #F659FD;
+			padding: 2em;
+			border-radius: 25%;
 		}
 		.gameplay-alert {
 			position: absolute;
@@ -22,61 +50,67 @@
 			bottom: 0;
 		}
 		#inventory {
-			background-image: url("imagenes/Hoja.jpg");
+			background-image: url("imagenes/hoja_libreta.png");
 			border-radius: 5px;
+			width: 100px;
+			height: 175px;
 			bottom: 0;
 			right: 0;
 		}
-		#PuntuacioneLIVE {
-			background-image: url("imagenes/Hoja.jpg");
-			border-radius: 5px;
-			right: 0;
-		}
 		#header-menu {
-			background-color: #ffc26a;
+			background-color: #0A1B51;
+			border-radius: 0%;
 			padding: 10px;
 			top: 0;
 			right: 0;
+			width: 200px;
 		}
 		
 		#header-menu .clay{
-			background-color:#f5f5f5;
+			border-radius: 0%;
+			background-color:#6397f8;
 			padding: 20px;
 		}
 
 		#timer-container {
 			left: 0;
 			right: 0;
-			width: 20%;
+			width: 40%;
 			text-align: center;
 			margin: 0 auto;
 			padding: 0.4em;
 			margin-top: 2em;
-			background-color: #ffc26a;
+			background-color: #0A1B51;
 			box-shadow: none;
 		}
 
 		#timer-container .clay{
 			
-			background-color:#f5f5f5;
+			background-color:#6397f8;
 		}
 
 		#orders-container {
-			left: 0;
+			left: 1;
 			right: 0;
 			bottom: 0;
-			width: 20%;
+			width: 30%;
 			text-align: center;
 			margin: 0 auto;
 			padding: 0.4em;
 			margin-bottom: 2em;
-			background-color: #ffc26a;
+			border-radius: 0%;
+			background-image: url("imagenes/hoja_libreta.png");
 		}
 		#contenedor-game-over {
 			margin: 0;
 			width: 100%;
 			height: 100%;
 			text-align: center;
+		}
+		#room-scores-alert {
+			top: 0;
+			bottom: 0;
+			left: 0;
 		}
 		.contenido-game-over {
 			width: 100%;
@@ -235,25 +269,27 @@
 				<h2 style="margin: 0;" id="timer"></h2>
 			</div>
 		</div>
-		<div id="orders-container" class="gameplay-alert clay">
-			<h4>Pedidos</h4>
+		<div id="orders-container" class="gameplay-alert">
+			<h4>Lista de pendientes</h4>
 			<ul id="orders"></ul>
 		</div>
-		<div id="press-button-alert" class="gameplay-alert clay" style="display: none; background-color:#f5f5f5"></div>
-		<div id="item-picked-alert" class="gameplay-alert clay" style="display: none; background-color:#f5f5f5"></div>
-		<div id="inventory" class="gameplay-alert clay">
-			<h2 style="text-align: center;">Inventario</h2>
-			<h3>Platillos</h3>
+		<div id="press-button-alert" class="notis" style="display: none; background-color:#33EFFF"></div>
+		<div id="item-picked-alert" class="notis" style="display: none; background-color:#33EFFF"></div>
+		<div id="inventory" class="no-mostrar">
+			
+			
 			<ul id="dishes-list"></ul>
-			<h3>Ingredientes</h3>
+			
 			<ul id="ingredients-list"></ul>
-			<h3>Items</h3>
+			
 			<ul id="items-list"></ul>
-			<h3>Ingredientes</h3>
+			
 		</div>
-		<div id="PuntuacioneLIVE" class="gameplay-alert clay">
-			<h2 style="text-align: center;">Puntuaciones</h2>
-			<ul id="PuntuacionesLIVE-list"></ul>
+		<div id="PuntuacioneLIVE" class="puntuaciones">
+			
+				<h2 style="text-align: center;">Puntuaciones</h2>
+				<ul id="PuntuacionesLIVE-list"></ul>
+			
 		</div>
 		<!-- GAME OVER -->
 		<div id="contenedor-game-over" class="gameplay-alert" style="display: none; background-image: url(imagenes/Nuevas/fondo_principal_provisional.jpg); color:rgb(3, 4, 3);">
